--- a/package.json
+++ b/package.json
@@ -93,7 +93,8 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src",
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier ./src --write",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
